# myenergi-feeder

./: .travis.yml  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yaml
src/: formats.rs  http_auth.rs  influxdb.rs  main.rs
