[package]
name = "myenergi-feeder"
version = "0.1.0"
authors = ["Javier Arrieta <javier@techdelivery.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
digest_auth = { version = "0.2.4"}
